--- a/_posts/0000-01-02-democat3457.md
+++ b/_posts/0000-01-02-democat3457.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your fancy text
+"And remember folks: it's all about the - bzzt. Interruption."
 Use the left arrow to go back!
